created html sections and initial css

--- a/First-calculator/index.html
+++ b/First-calculator/index.html
@@ -12,6 +12,36 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+        <section id="general-section">
+            <section id="total"> 9 </section>
+            <section id="buttons">
+                <section class="buttons-row">
+                    <button class="button">7</button>
+                    <button class="button">8</button>
+                    <button class="button">9</button>
+                    <button class="button">&divide;</button>
+                </section>
+                <section class="buttons-row">
+                    <button class="button">4</button>
+                    <button class="button">5</button>
+                    <button class="button">6</button>
+                    <button class="button">&times</button>
+                </section>
+                <section class="buttons-row">
+                    <button class="button">1</button>
+                    <button class="button">2</button>
+                    <button class="button">3</button>
+                    <button class="button">&plus;</button>
+                </section>
+                <section class="buttons-row">
+                    <button class="button">0</button>
+                    <button id="dot" class="button">.</button>
+                    <button class="button">&equals;</button>
+                    <button class="button">&minus;</button>
+                </section>
+
+            </section>
+        </section>
 
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
