--- a/First-calculator/index.html
+++ b/First-calculator/index.html
@@ -13,27 +13,27 @@
 	</head>
 	<body>
         <section id="general-section">
-            <section id="total"> 9 </section>
+            <section id="total"> 8 </section>
             <section id="buttons">
-                <section class="buttons-row">
+                <section id="row-1" class="buttons-row">
                     <button class="button">7</button>
                     <button class="button">8</button>
                     <button class="button">9</button>
                     <button class="button">&divide;</button>
                 </section>
-                <section class="buttons-row">
+                <section id="row-2" class="buttons-row">
                     <button class="button">4</button>
                     <button class="button">5</button>
                     <button class="button">6</button>
                     <button class="button">&times</button>
                 </section>
-                <section class="buttons-row">
+                <section id="row-3" class="buttons-row">
                     <button class="button">1</button>
                     <button class="button">2</button>
                     <button class="button">3</button>
                     <button class="button">&plus;</button>
                 </section>
-                <section class="buttons-row">
+                <section id="row-4" class="buttons-row">
                     <button class="button">0</button>
                     <button id="dot" class="button">.</button>
                     <button class="button">&equals;</button>
