--- a/First-calculator/index.html
+++ b/First-calculator/index.html
@@ -13,31 +13,31 @@
 	</head>
 	<body>
         <section id="general-section">
-            <section id="total"> 8 </section>
+            <section data-current-imput id="total"></section>
             <section id="buttons">
                 <section id="row-1" class="buttons-row">
-                    <button class="button">7</button>
-                    <button class="button">8</button>
-                    <button class="button">9</button>
-                    <button class="button">&divide;</button>
+                    <button data-number-button class="button">7</button>
+                    <button data-number-button class="button">8</button>
+                    <button data-number-button class="button">9</button>
+                    <button data-operation-button class="button">÷</button>
                 </section>
                 <section id="row-2" class="buttons-row">
-                    <button class="button">4</button>
-                    <button class="button">5</button>
-                    <button class="button">6</button>
-                    <button class="button">&times</button>
+                    <button data-number-button class="button">4</button>
+                    <button data-number-button class="button">5</button>
+                    <button data-number-button class="button">6</button>
+                    <button data-operation-button class="button">&times;</button>
                 </section>
                 <section id="row-3" class="buttons-row">
-                    <button class="button">1</button>
-                    <button class="button">2</button>
-                    <button class="button">3</button>
-                    <button class="button">&plus;</button>
+                    <button data-number-button class="button">1</button>
+                    <button data-number-button class="button">2</button>
+                    <button data-number-button class="button">3</button>
+                    <button data-operation-button class="button">&plus;</button>
                 </section>
                 <section id="row-4" class="buttons-row">
-                    <button class="button">0</button>
-                    <button id="dot" class="button">.</button>
-                    <button class="button">&equals;</button>
-                    <button class="button">&minus;</button>
+                    <button data-number-button class="button">0</button>
+                    <button data-number-button id="dot" class="button">.</button>
+                    <button data-equals class="button">&equals;</button>
+                    <button data-operation-button class="button">&minus;</button>
                 </section>
 
             </section>
