added movement to the dog

--- a/search-the-bone/index.html
+++ b/search-the-bone/index.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <div class="container" id="board"></div>
+    <input id="direction" type="text" name="" placeholder="Enter direction">
+    <input id="meters" type="text" name="" placeholder="Enter meters">
+    <button>Click me!</button>
 
     <script type="text/javascript" src="/js/main.js"></script>
   </body>
