completed mvp of the game and solved main bugs

--- a/search-the-bone/index.html
+++ b/search-the-bone/index.html
@@ -7,9 +7,13 @@
   </head>
   <body>
     <div class="container" id="board"></div>
-    <input id="direction" type="text" name="" placeholder="Enter direction">
-    <input id="meters" type="text" name="" placeholder="Enter meters">
-    <button>Click me!</button>
+    <div id="inputs">
+      <input id="direction" type="text" name="" placeholder="Enter direction">
+      <input id="meters" type="text" name="" placeholder="Enter meters">
+      <button>Click me!</button>
+      <h2 id="distance"></h2>
+    </div>
+    
 
     <script type="text/javascript" src="/js/main.js"></script>
   </body>
